--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -140,6 +140,8 @@ footer {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-evenly;
+    width: 80%;
+    margin: 0 auto;
 }
 .contact-name{
     display: flex;
